@startuml

title __CALCU's Class Diagram__\n


      class calcu.calcu.ErrorHandler {
          - confirm : Button
          - errorMessage : Label
          + confirm()
          + setErrorMessage()
      }


  


      class calcu.calcu.Export {
          - grandTotal : Label
          + initialize()
      }


  

      class calcu.calcu.Main {
          {static} + account : Account
          + getAccount()
          {static} + main()
          + start()
      }


  

      abstract class calcu.calcu.Menu {
          # mainStage : Stage
          - segments : ArrayList<Node>
          {abstract} + initialize()
          + setMainStage()
          + showError()
          + showExport()
          + showPeople()
          + showPeopleEdit()
          + showRegister()
          + showSettings()
      }


  


      class calcu.calcu.People {
          {static} + editEmployee : Employee
          - container : VBox
          + getEmployee()
          + initialize()
          + newProfile()
          - addProfileToContainer()
          - delProfile()
          - editProfile()
      }


  

      class calcu.calcu.Register {
          - password : PasswordField
          - username : TextField
          {static} + checkAccDatabase()
          + createAccount()
          + initialize()
          + updatePassword()
          + updateUsername()
      }


      class calcu.calcu.Settings {
          - newPass : TextField
          - oldPass : TextField
          + changePass()
          + initialize()
      }


  

      class calcu.calcu.peopleEdit {
          + isNewProfile : boolean
          - button : ImageView
          - hourly : TextField
          - hours : TextField
          - incomeTax : TextField
          - insurance : TextField
          - insuranceType : ChoiceBox<String>
          - insuranceTypes : String[]
          - monthly : TextField
          - multi : TextField
          - name : TextField
          - note : TextField
          - ohours : TextField
          - pgb : TextField
          - phil : TextField
          - totalFinal : TextField
          - totalSalary : TextField
          - totalTax : TextField
          + edit()
          + existingEmployee()
          + initialize()
          + insuranceUpdate()
          {static} + numericOnly()
          + previous()
          + save()
          + textUpdate()
          + update()
      }



      class calcu.calcu.peopleSegment {
          - button : ImageView
          - profileName : Label
          - salaryTotal : Label
          - salaryType : Label
          - segment : AnchorPane
          + create()
          + delProfile()
          + getAnchorPane()
          + getName()
          + getSegment()
          + initialize()
          + setMonthlyRate()
          + setName()
          + setNote()
      }


  

  calcu.calcu.Export -up-|> calcu.calcu.Menu
  calcu.calcu.Main -up-|> javafx.application.Application
  calcu.calcu.Menu -up-|> calcu.calcu.Main
  calcu.calcu.People -up-|> calcu.calcu.Menu
  calcu.calcu.People o-- calcu.calcu.peopleSegment : controllerSegment
  calcu.calcu.Register -up-|> calcu.calcu.Menu
  calcu.calcu.Settings -up-|> calcu.calcu.Menu
  calcu.calcu.peopleEdit -up-|> calcu.calcu.People
  calcu.calcu.peopleSegment -up-|> calcu.calcu.Menu


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
